# prahistorie

./: Makefile.am  Makefile.in  configure.in  makefile
Theatre/: Theatre.vcproj  main.cpp
Win32/: Prahistorie.sln  Prahistorie.vcproj
docs/: navod.doc  readme.txt
src/: StdAfx.h  app.cpp  app.h  game.rc  main.cpp
